--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "electron": "^22.0.0"
+    "electron": "^22.0.0",
+    "moment": "^2.29.4"
   }
 }
