--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "electron": "^22.0.0",
+    "jsonfile-promised": "^0.0.1",
     "moment": "^2.29.4"
   }
 }
